--- a/tournament/src/main/webapp/resources/less/style.less
+++ b/tournament/src/main/webapp/resources/less/style.less
@@ -30,6 +30,38 @@
 	.subMenu {
 		display: none;
 		background-color: #555;
+		height: 100%;
+		
+	}
+	.selectContainer {
+		background: url(../resources/images/Arrow-down-icon.png) no-repeat right #444;
+		background-size: 34px;
+		width: calc(~"80% - 34px");
+		padding-right: 34px;
+		height: 34px;
+		overflow: hidden;
+		border: 1px solid black;
+		border-radius: 10px;
+		margin: auto;
+		margin-top: 1rem;
+		.selectType {
+			background: url(../resources/images/Arrow-down-icon.png) no-repeat right #444;
+			background-size: 34px;
+			color: white;
+			text-align: center;
+		   width: calc(~"100% - -34px");
+		   line-height: 1;
+		   border: 0;
+		   border-radius: 0;
+		   height: 34px;
+		   -webkit-appearance: none;
+		    -moz-appearance: none;
+		   text-indent: 0.01px;          
+      	   text-overflow: "";               
+		}
+	}
+	#detailForm {
+		display: none;
 	}
 }
 
